--- a/public/coupon.css
+++ b/public/coupon.css
@@ -138,5 +138,72 @@ footer {
   .image:hover img {
     transform: scale(1.1);
   }
+  #amount {
+	padding: 10px;
+	font-size: 16px;
+	border-radius: 5px;
+	border: 1px solid #ccc;
+	width: 200px;
+	margin-bottom: 10px;
+	background-color: #232f3e;
+  }
+
+  #amoun:hover{
+	background-color: #cc1e35;
+  } 
   
+  #amount option {
+	padding: 10px;
+	font-size: 16px;
+  }
+  select {
+	width: 100%;
+	height: 40px;
+	font-size: 16px;
+	font-weight: bold;
+	border: 2px solid #ccc;
+	border-radius: 5px;
+	padding: 8px;
+	background-color: #f9f9f9;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	background-image: url('https://cdn.icon-icons.com/icons2/2107/PNG/512/file_type_material_icon_130382.png');
+	background-repeat: no-repeat;
+	background-position: 95% 50%;
+	cursor: pointer;
+  }
   
+  select:focus {
+	outline: none;
+	border-color: #6d9bf1;
+  }
+  
+  option {
+	font-size: 16px;
+	font-weight: bold;
+	color: #333;
+  }
+  select {
+	/* styles du select */
+	opacity: 0.9;
+	transition: opacity 0.2s ease-in-out;
+  }
+  
+  select:hover {
+	opacity: 1;
+  }  
+  #type {
+	padding: 10px;
+	font-size: 16px;
+	border-radius: 5px;
+	border: 1px solid #ccc;
+	width: 200px;
+	margin-bottom: 10px;
+	background-color: #232f3e;
+  }
+  
+  #type option {
+	padding: 10px;
+	font-size: 16px;
+  }
